fix x axis overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+body{
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
